<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/main_bkgd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/txtV_main_header"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/main_header"
        android:textColor="@color/main_header"
        android:textSize="@dimen/main_header"/>
    <RelativeLayout
        android:layout_below="@id/txtV_main_header"
        android:id="@+id/nfc_read_rellayout"
        android:layout_width="match_parent"
        android:layout_height="164dp">
        <TextView
            android:id="@+id/txtV_nfc_read"
            android:layout_width="match_parent"
            android:text="@string/nfc_read_header"
            android:textColor="@color/nfc_sub_headers_color"
            android:textSize="@dimen/sub_headers_txt_size"
            android:layout_height="24dp" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_below="@id/txtV_nfc_read"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txtV_read_msg"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:textColor="@color/textColor_read"
                android:textSize="@dimen/nfc_read_txtSize"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/btn_clear_read"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btn_clear"
                    android:textSize="@dimen/btn_write_text_size"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_below="@id/nfc_read_rellayout"
        android:id="@+id/nfc_write_rellayout"
        android:layout_width="match_parent"
        android:layout_height="164dp">
        <TextView
            android:id="@+id/txtV_nfc_write"
            android:layout_width="match_parent"
            android:text="@string/nfc_write_header"
            android:textColor="@color/nfc_sub_headers_color"
            android:textSize="@dimen/sub_headers_txt_size"
            android:layout_height="24dp" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_below="@id/txtV_nfc_write"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/edTxt_write"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:textColor="@color/edTxt_text"
                android:textSize="@dimen/nfc_write_txtSize"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/btn_write"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btn_write_nfc"
                    android:textSize="@dimen/btn_write_text_size"/>
                <Button
                    android:id="@+id/btn_clear_write"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btn_clear"
                    android:textSize="@dimen/btn_write_text_size"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
